fix(Modal) fix modal overflow

--- a/src/components/UI/Modal/Modal.scss
+++ b/src/components/UI/Modal/Modal.scss
@@ -73,7 +73,7 @@
         .modal-body {
             max-height: 90vh;
             max-width: 70vw;
-            overflow-y: overlay;
+            overflow-y: auto;
 
             @media screen and (max-width: 1000px) {
                 max-width: 100vw;
